# newt

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  README.md  debug_analysis.py  flake8_report.txt  metrics_check.py  mkdocs.yml  pyproject.toml  requirements.txt  struct.md  test_output.txt
.github/workflows/: build-wheels.yml  ci.yml  release.yml
benchmarks/: __init__.py  chimerge_performance.py  feature_selector_fit_benchmark.py  metric_vs_toad.py  psi_performance.py  stepwise_benchmark.py  verify_logit_parity.py
configs/: base.yaml  development.yaml  production.yaml
docs/: architecture.md  binning_guide.md  index.en.md  index.md  index.zh.md  release_notes.md  release_notes_zh.md  user_guide.md  user_guide.zh.md  user_guide_zh.md
docs/api/: reference.en.md  reference.md  reference.zh.md
docs/benchmarks/: chimerge_performance.md  metric_vs_toad.md  psi_performance.md  stepwise_performance.md
docs/superpowers/plans/: 2026-04-03-rust-wheel-distribution.md
docs/superpowers/specs/: 2026-04-03-rust-wheel-distribution-design.md
examples/: 01-basic-usage.ipynb  04-scorecard_development_demo.ipynb
examples/.ipynb_checkpoints/: 01-basic-usage-checkpoint.ipynb
rust/newt_iv_rust/: Cargo.toml
rust/newt_iv_rust/src/: lib.rs
rust/newt_native/: Cargo.toml
rust/newt_native/src/: binary_metrics.rs  binning.rs  correlation.rs  iv.rs  lib.rs  logit.rs  psi.rs  shared.rs
scripts/: benchmark.py  profile_memory.py  validate_data.py
src/credit_risk/backend/: pandas_backend.py
src/credit_risk/config/: validation.py
src/credit_risk/data/: partitioning.py
src/credit_risk/evaluation/: feature_evaluator.py  model_evaluator.py
src/credit_risk/exceptions/: computation_exceptions.py
src/credit_risk/features/analysis/: correlation.py  iv_calculator.py  woe_calculator.py
src/credit_risk/features/binning/: base.py  supervised.py  unsupervised.py
src/credit_risk/features/selection/: embedded_methods.py
src/credit_risk/features/transformation/: encoding.py  scaling.py
src/credit_risk/metrics/: __init__.py  auc.py  gini.py  ks.py  lift.py  psi.py
src/credit_risk/monitoring/: alert_system.py  drift_monitor.py  performance_monitor.py
src/credit_risk/visualization/dashboard/: interactive_dashboard.py
src/credit_risk/visualization/plots/: diagnostic_plots.py  distribution_plots.py
src/newt/: __init__.py  _engine.py  _native.py  _newt_native.py  config.py  report_sort_utils.py
src/newt/backend/: cudf_backend.py  dask_backend.py  modin_backend.py  polars_backend.py  registry.py
src/newt/benchmarking/: __init__.py  metric_vs_toad.py  psi_performance.py
src/newt/data/: splitting.py
src/newt/evaluation/: report_generator.py
src/newt/features/analysis/: __init__.py  batch_iv.py  correlation.py  iv_calculator.py  iv_math.py  woe_calculator.py  woe_transformer.py
src/newt/features/binning/: __init__.py  base.py  binner.py  binner_mixins.py  binning_stats.py  combiner.py  supervised.py  unsupervised.py  woe_storage.py
src/newt/features/selection/: __init__.py  analyzer.py  filter_methods.py  filtering.py  postfilter.py  prefilter.py  selector.py  stepwise.py  wrapper_methods.py
src/newt/features/transformation/: binning.py
src/newt/metrics/: __init__.py  _common.py  auc.py  binary_metrics.py  gini.py  ks.py  lift.py  psi.py  reporting.py  vif.py
src/newt/modeling/: __init__.py  logistic.py  scorecard.py  scorecard_builder.py  scorecard_scorer.py  scorecard_sql_builder.py
src/newt/pipeline/: __init__.py  monitoring_pipeline.py  pipeline.py  state.py  steps.py
src/newt/reporting/: __init__.py  excel_writer.py  interactive.py  model_adapter.py  report.py  score_prep.py  table_context.py  tables.py
src/newt/reporting/builders/: __init__.py  appendix_sheets.py  feature_metrics.py  group_metrics.py  main_sheets.py  orchestrator.py  sheet_registry.py
src/newt/results/: __init__.py  report.py  scorecard.py  selection.py  visualization.py
src/newt/statistics/: __init__.py  distribution.py  eda.py  multivariate.py  stability.py  univariate.py
src/newt/utils/: __init__.py  decorators.py  serializers.py  validators.py
src/newt/visualization/: __init__.py  binning.py  binning_viz.py
src/newt/visualization/dashboard/: base_dashboard.py
src/newt/visualization/plots/: performance_plots.py
tests/: conftest.py  debug_binning.py  report.py  test_binning_methods.py  test_kwargs.py  test_viz_seaborn.py
tests/cross_val/: compare_with_toad.py
tests/integration/: test_performance.py  test_pipeline.py
tests/packaging/: __init__.py  test_install_from_wheel.py  test_workflows.py
tests/unit/: test_engine.py  test_native_loader.py
tests/unit/benchmarking/: test_metric_vs_toad.py
tests/unit/features/analysis/: test_analysis.py  test_batch_iv.py  (+2 more)
tests/unit/metrics/: test_binary_metrics.py  test_metrics.py  test_reporting_import.py  test_reporting_metrics.py  test_robustness.py  test_weighted_metrics.py
tests/unit/modeling/: test_logistic.py  test_scorecard.py
tests/unit/pipeline/: test_pipeline.py
tests/unit/reporting/: test_interactive.py  test_model_adapter.py  test_report.py  test_sheet_registry.py  test_tables.py
tests/unit/results/: test_report_result.py  test_scorecard_spec.py
tests/unit/stats/: test_eda.py
tests/unit/utils/: test_config_loader.py  test_decorators.py
tests/unit/visualization/: test_viz_seaborn.py
(+8 files in other folders)
