[tool.poetry]
name = "newt"
version = "0.1.0"
description = "A lightweight Python toolkit for efficient feature analysis and statistical diagnostics in credit risk modeling"
authors = ["harrylyx <harrylyx@qq.com>"]
packages = [{include = "newt", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "<2.0.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.10.0"
seaborn = "^0.13.0"
matplotlib = "^3.7.0"
optbinning = "^0.19.0"
cvxpy = ">=1.3,<1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"
coverage = "^7.0.0"
pytest-cov = "^4.0.0"
toad = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
