[project]
name = "newt"
version = "0.1.0"
description = "A lightweight Python toolkit for efficient feature analysis and statistical diagnostics in credit risk modeling"
readme = "README.md"
requires-python = ">=3.8.1,<4.0"
authors = [{ name = "harrylyx", email = "harrylyx@qq.com" }]
dependencies = [
    "numpy<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "matplotlib>=3.7.0,<4.0.0",
    "statsmodels>=0.14.0,<0.15.0",
    "xlsxwriter>=3.2.0,<4.0.0",
    "maturin>=1.8.0,<2.0.0",
]

[project.optional-dependencies]
optbinning = [
    "optbinning>=0.20.0,<0.21.0; python_version < '3.12'",
    "ortools<9.12; python_version < '3.12'",
    "cvxpy>=1.3,<1.5; python_version < '3.12'",
]

[dependency-groups]
dev = [
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "pytest>=7.0.0,<8.0.0",
    "flake8>=6.0.0,<7.0.0",
    "coverage>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "ipython>=8.0.0,<9.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pyarrow>=15.0.0,<20.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "optbinning>=0.20.0,<0.21.0; python_version < '3.12'",
    "ortools<9.12; python_version < '3.12'",
    "cvxpy>=1.3,<1.5; python_version < '3.12'",
    "toad==0.1.3; python_version < '3.12' and platform_machine != 'arm64' and platform_machine != 'aarch64'",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
