[project]
name = "newt"
version = "0.2.2"
description = "A lightweight Python toolkit for efficient feature analysis and statistical diagnostics in credit risk modeling"
readme = "README.md"
requires-python = ">=3.8.5,<3.13"
authors = [{ name = "harrylyx", email = "harrylyx@qq.com" }]
dependencies = [
    "numpy<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "matplotlib>=3.7.0,<4.0.0",
    "statsmodels>=0.14.0,<0.15.0",
    "xlsxwriter>=3.2.0,<4.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
optbinning = [
    "optbinning>=0.20.0,<0.21.0; python_version < '3.12'",
    "ortools<9.8; python_version < '3.12'",
    "cvxpy>=1.3,<1.5; python_version < '3.12'",
]
docs = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.4.0,<10.0.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-static-i18n>=1.2.0",
    "mkdocs-autorefs>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "pytest>=7.0.0,<8.0.0",
    "flake8>=6.0.0,<7.0.0",
    "coverage>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "ipython>=8.0.0,<9.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pyarrow>=15.0.0,<20.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "optbinning>=0.20.0,<0.21.0; python_version < '3.12'",
    "ortools<9.8; python_version < '3.12'",
    "cvxpy>=1.3,<1.5; python_version < '3.12'",
    "maturin>=1.8.0,<2.0.0",
    "ipykernel>=6.29.5",
]
benchmark = [
    "toad==0.1.5",
]

[build-system]
requires = ["maturin>=1.8.0,<2.0.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "newt._newt_native"
manifest-path = "rust/newt_native/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
